[package]
name = "easrvr_desktop_bridge"
version = "0.1.0"
authors = ["cannotilever <cannotilever@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }